[tool.poetry]
name = "vast-website"
version = "0.1.0"
description = "VAST website"
authors = ["Tenzir <engineering@tenzir.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.10"
nbconvert = "^7.4.0"
ipykernel = "^6.23.1"
bash_kernel = "^0.9.0"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
