[tool.poetry]
name = "tenzir-website"
version = "0.1.0"
description = "Tenzir website"
authors = ["Tenzir <engineering@tenzir.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.10"
nbconvert = "^7.16.4"
ipykernel = "^6.29.5"
bash_kernel = "^0.9.3"
jupyter = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
